--- a/src/components/Slider/Slider.astro
+++ b/src/components/Slider/Slider.astro
@@ -8,80 +8,73 @@ import FadeScale from "./FadeScale";
       <div class="slide">
         <div
           class="item"
-          style="background-image: url(https://source.unsplash.com/1400x600/?animal,two);"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AKGpihZOwggT5rSok0LYrs5bdyiIaLKtWs4DIZRtnp9MKBuAmYd3QILzyvlDMP3oRBRDa--tY7QqSuuqdZ1KB9DVOtrA0aZEK295O-Q=s1600-rw-v1);"
         >
           <div class="content">
-            <div class="name">Rayen</div>
+            <div class="name">Graduation Day</div>
             <div class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur adipisci doloribus animi.
+              The culmination of four years of university with an excellent
+              degree in hand on the stage of honor is a memory I'll surely never
+              forget.
             </div>
-            <button>See More</button>
           </div>
         </div>
         <div
           class="item"
-          style="background-image: url(https://source.unsplash.com/1400x600/?animal,three);"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AKGpihaY_Ey85GY-TeBP7OkGVB2rjUUshol9WCec_9gJFFQm6pwK-NjBMuZDChr-Nv9fh2hIsagLxtChNDmRnyZVry1-07IVRXNy2Q=s1600-rw-v1);"
         >
           <div class="content">
-            <div class="name">Rayen</div>
+            <div class="name">Mother</div>
             <div class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur adipisci doloribus animi.
+              Inspired by mother's encouragement to choose UIT as the place to
+              pursue dreams.
             </div>
-            <button>See More</button>
           </div>
         </div>
         <div
           class="item"
-          style="background-image: url(https://source.unsplash.com/1400x600/?animal,four);"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AKGpihZ5uSv9Y3O2ik5Uky3FzSSJ_2MpZ8oqsxQEj7V1c6uYb8LPedzMZUEu-5WGV_SL89uHWcCCqC-gfn-tE4qehREVLhlYdrVrVG8=s1600-rw-v1);"
         >
           <div class="content">
-            <div class="name">Rayen</div>
+            <div class="name">Final Day in the Army</div>
             <div class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur adipisci doloribus animi.
+              Three years in the army instilled consistency in me, shaping my
+              pursuit of dreams—a truly memorable experience.
             </div>
-            <button>See More</button>
           </div>
         </div>
         <div
           class="item"
-          style="background-image: url(https://source.unsplash.com/1400x600/?animal,five);"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AKGpihZH89mNUy6992rJxjqAQyHbzQ6-de6zdPPS4WDet8M2sOTZB2nDNmyuLaTo5j8OUwF_b3xB72OAi_uiVGpZ7DPXdjLYzLHad70=s1600-rw-v1);"
         >
           <div class="content">
-            <div class="name">Rayen</div>
+            <div class="name">Student register.</div>
             <div class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur adipisci doloribus animi.
+              With immense effort, I successfully passed a test to gain entry
+              into UIT University.
             </div>
-            <button>See More</button>
           </div>
         </div>
         <div
           class="item"
-          style="background-image: url(https://source.unsplash.com/1400x600/?animal,one);"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AKGpihb4OUsAGSl86vux_V_ydRXPHvoNzXokWnuyCVHFHcZHccUR1NfCBeFYlJvUFY_dP__q_DbofEHISPLDk8Z6aKn9ri9MsEYKrK8=s1600-rw-v1);"
         >
           <div class="content">
-            <div class="name">Rayen</div>
+            <div class="name">Student's Life</div>
             <div class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur adipisci doloribus animi.
+              The memory of my first year as a student at university.
             </div>
-            <button>See More</button>
           </div>
         </div>
         <div
           class="item"
-          style="background-image: url(https://source.unsplash.com/1400x600/?animal,six);"
+          style="background-image: url(https://lh3.googleusercontent.com/drive-viewer/AKGpihZIDJvRbVB1yV9SDJbE-WHvSMMFRrBJILoWmuMXBkNSOTlmgfve769dgmg2-2EHAJFSi8CphtaXP4UZ_vXINsf92_D-4EYFgWU=s1600-rw-v1);"
         >
           <div class="content">
-            <div class="name">Rayen</div>
+            <div class="name">First Job</div>
             <div class="desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur adipisci doloribus animi.
+              Securing my first job while still a third-year student.
             </div>
-            <button>See More</button>
           </div>
         </div>
       </div>
@@ -169,6 +162,11 @@ import FadeScale from "./FadeScale";
       "Helvetica Neue",
       sans-serif;
     display: none;
+    border-radius: 8px;
+    line-height: 1.5; Line spacing
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); /* Text shadow */
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    padding: 10px 20px; /* Padding around text */
   }
 
   .container .item:nth-child(2) .content {
