--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -3,7 +3,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
-  src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
+  src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap');
 }
 
 /* poppins-700 - latin */
@@ -11,5 +11,5 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
-  src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+  src: url('https://fonts.googleapis.com/css2?family=Montserrat:wght@00&display=swap');
 }
