--- a/src/components/Sections/Contact/contact.scss
+++ b/src/components/Sections/Contact/contact.scss
@@ -1,3 +1,6 @@
+@import "../../../styles/styles.scss";
+
+
 .contact {
   height: 100%;
   max-width: 1366px;
@@ -5,17 +8,44 @@
   align-items: center;
   display: flex;
   gap: 50px;
+
+
+  @include mobile {
+    max-width: 480px;
+    margin: 8px;
+    flex-direction: column;
+    gap: 0px;
+    justify-content: center;
+    align-items: center;
+  }
   .textContainer{
     flex: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 40px;
+    @include mobile {
+      gap: 8px;
+      max-height: 200px;
+      flex: none;
+      height: fit-content;
+      .item {
+        display: none;
+      }
+    }
+
+
     h1{
       font-size: 100px;
       line-height: 88px;
+      @include mobile {
+        font-size: 48px;
+        line-height: 52px;
+      }
     }
   }
   .formContainer{
+    width: 100%;
     flex: 1;
     position: relative;
     .phoneSvg{
@@ -43,6 +73,9 @@
         font-weight: 500;
       }
     }
-
+@include mobile {
+  justify-content: center;
+  align-content: center;
+}
   }
 }
