--- a/src/components/Sections/General/Greeting/greeting.scss
+++ b/src/components/Sections/General/Greeting/greeting.scss
@@ -1,16 +1,27 @@
+@import "../../../../styles/styles.scss";
 
 .greeting {
     min-width: 400px;
     margin-bottom: 32px;
     p {
-        font-size: 40px;
+        font-size: 2rem;
         b{
-            font-size: 40px;
+            font-size: 2rem;
             font-weight: bold;
         }
     }
     i{
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: bold;
+    }
+
+    @include mobile{
+        p {
+            font-size: 1.25rem;
+            b{
+                font-size: 1rem;
+            }
+        }
+        margin-bottom: 0px;
     }
 }
