--- a/src/components/Sections/Project/project.scss
+++ b/src/components/Sections/Project/project.scss
@@ -1,7 +1,7 @@
+@import "../../../styles/styles.scss";
 
 .project{
     position: relative;
-
   .progress {
     position: sticky;
     top: 0;
@@ -11,6 +11,9 @@
     color: orange;
     font-size: 36px;
 
+    @include mobile {
+      padding-top: 10px;
+    }
     .progressBar {
       height: 10px;
       background-color: white;
@@ -24,6 +27,11 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    @include mobile {
+      padding-top: 140px; /// Recalculate later.
+      height: unset;
+      overflow: unset;
+    }
 
     .wrapper {
       max-width: 1366px;
@@ -34,16 +42,29 @@
       justify-content: center;
       gap: 50px;
 
+      @include mobile {
+        flex-direction: column;
+      }
       .imageContainer {
         flex: 1;
         height: 50%;
         border-radius: 2cap;
+        z-index: 1;
+        @include mobile {
 
+          margin-bottom: 56px;
+          max-height: 480px;
+        }
+        
         img {
           max-width: 800px;
           height: 100%;
           object-fit: cover;
-          border-radius: 2cap;
+          @include mobile{
+            height: unset;
+            max-width: 480px;
+            height: 300px;
+          }
         }
       }
 
@@ -53,14 +74,23 @@
         flex-direction: column;
         gap: 30px;
 
-
+        @include mobile {
+          gap: 16px;
+          max-width: 480px;
+        }
         h2 {
           font-size: 72px;
+          @include mobile{
+            font-size: 32px;
+          }
         }
 
         p {
           color: rgb(164, 164, 164);
           font-size: 20px;
+          @include mobile{
+            font-size: 16px;
+          }
         }
 
         button {
