--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,6 @@ import Project from "@components/Sections/Project/Project";
   <Parallax type="project" client:load />
   <Project client:load />
   <Parallax type="services" client:load />
-  <Slider />
+  <!-- <Slider /> -->
   <Contact client:load />
 </BaseLayout>
